objects/ssot__CommunicationSubscriptionChannelType__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CommunicationSubscriptionId__c</fullName>
        <label>Communication Subscription</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelId__c</fullName>
        <label>Engagement Channel</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelTypeId__c</fullName>
        <label>Engagement Channel Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelUsageId__c</fullName>
        <label>Engagement Channel Usage</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Communication Subscription Chnl Type Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SenderCode__c</fullName>
        <label>Sender Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1696932794221_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CommunicationSubscriptionChannelType_rel</label>
        <referenceTo>ssot__EngagementChannel__dlm</referenceTo>
        <relationshipLabel>CommunicationSubscriptionChannelType_rel</relationshipLabel>
        <relationshipName>rel_1696932794221_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761156905_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CommunicationSubscriptionChannelType_rel</label>
        <referenceTo>ssot__CommunicationSubscription__dlm</referenceTo>
        <relationshipLabel>CommunicationSubscriptionChannelType_rel</relationshipLabel>
        <relationshipName>rel_1697761156905_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761156975_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CommunicationSubscriptionChannelType_rel</label>
        <referenceTo>ssot__EngagementChannelType__dlm</referenceTo>
        <relationshipLabel>CommunicationSubscriptionChannelType_rel</relationshipLabel>
        <relationshipName>rel_1697761156975_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>